Bug 409825 - Maximize icon split view - un-maximize tool tip should be fix
Summary: Maximize icon split view - un-maximize tool tip should be fix
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: split-view (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-07-15 15:09 UTC by Kurt Hindenburg
Modified: 2020-11-02 02:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kurt Hindenburg 2019-07-15 15:09:42 UTC
When you have split views, the maximize icon has the correct tooltip;
however, once maximized, the maximize icon still has 'Maximize terminal'

It should be either 'Un-maximize terminal' or perhaps "Restore terminal sizes'




SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Justin Zobel 2020-10-22 23:33:23 UTC
Can confirm this is still an issue as of 20.08.1

Line of code that matches (from my brief search) https://invent.kde.org/utilities/konsole/-/blob/master/src/widgets/TerminalHeaderBar.cpp#L95
Comment 2 Bug Janitor Service 2020-10-31 18:53:44 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/262
Comment 3 Carlos Alves 2020-11-02 02:19:40 UTC
Git commit 7e99f5cf93b308518398ad2555c936899e488ef0 by Carlos Alves.
Committed on 31/10/2020 at 19:40.
Pushed by hindenburg into branch 'master'.

Fix Maximize/Restore split terminal tool tip
FIXED-IN: 20.12

M  +5    -0    src/widgets/TerminalHeaderBar.cpp

https://invent.kde.org/utilities/konsole/commit/7e99f5cf93b308518398ad2555c936899e488ef0