Fix Maximize/Restore split terminal tool tip

BUG: 409825
FIXED-IN: 20.12